--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -11,9 +11,12 @@
         android:id="@+id/notification_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:contentDescription="@string/imageview_avatar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/avatar1"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/notification_textContainer"
@@ -28,16 +31,16 @@
             android:id="@+id/notification_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hannah Montana"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Username" />
 
         <TextView
             android:id="@+id/notification_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="started to follow you."
+            android:text="@string/started_following_notification_message"
             android:textSize="17sp"
             app:layout_constraintTop_toBottomOf="@+id/notification_title"
             app:layout_constraintStart_toStartOf="parent" />
