--- a/app/src/main/res/layout/notifications_profile_appbar_menu.xml
+++ b/app/src/main/res/layout/notifications_profile_appbar_menu.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:contentDescription="@string/navigation_bar_label_notifications"
         android:src="@drawable/baseline_notifications_32"/>
 
     <TextView
