--- a/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
@@ -64,16 +64,17 @@
 
         <Button
             android:id="@+id/button_create_new_collection"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
+            android:maxWidth="320dp"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_to_collection_divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/create_section"
             android:layout_marginHorizontal="25dp"
-            android:drawableTint="?attr/colorButtonNormal"
+            android:drawableTint="@color/white"
             android:drawableEnd="@drawable/outline_add_circle_24"
             android:layout_marginTop="14dp"
             android:text="@string/button_create_new_collection"
@@ -146,22 +147,29 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_input_layout_add_collection"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:minWidth="380dp"
+                android:maxWidth="465dp"
                 android:layout_height="wrap_content"
                 android:minHeight="48dp"
                 android:hint="@string/textview_hint_insert_collection_name"
-                android:layout_marginTop="6dp"
+                android:paddingVertical="6dp"
                 app:errorEnabled="true"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/collection_name_title">
+                app:layout_constraintTop_toBottomOf="@id/collection_name_title"
+                app:boxStrokeColor="@color/text_input_box_stroke_color"
+                app:hintTextColor="?attr/colorSecondary"
+                app:boxStrokeWidth="2dp"
+                app:cursorColor="?attr/colorAccent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_text_create_collection"
                     style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:lines="1"
@@ -173,20 +181,21 @@
             <TextView
                 android:id="@+id/textview_visibility_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
+                android:gravity="center_vertical"
                 android:text="@string/textview_make_collection_public"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@id/text_input_layout_add_collection"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="10dp" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_collection_visibility"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:shadowColor="?attr/colorAccent"
                 app:layout_constraintTop_toBottomOf="@id/text_input_layout_add_collection"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:theme="@style/CustomCollectionVisibilitySwitch" />
 
             <TextView
                 android:id="@+id/textview_visibility_description"
@@ -206,7 +215,7 @@
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:textSize="20sp"
                 android:layout_marginTop="20dp"
-                android:textColor="?attr/colorAccent"
+                android:textColor="?attr/colorOnBackground"
                 app:layout_constraintTop_toBottomOf="@id/textview_visibility_description"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/button_confirm_collection_insertion"
