--- a/app/src/main/res/layout/bottom_sheet_collection_creation.xml
+++ b/app/src/main/res/layout/bottom_sheet_collection_creation.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:text="@string/textview_collection_name_placeholder"
             android:textSize="20sp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_section_title" />
 
@@ -48,8 +48,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/google_login_text"
             android:textSize="20sp"
-            android:layout_marginVertical="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/textview_section_title"
             app:layout_constraintEnd_toStartOf="@id/character_separator"
             tools:text="0"
@@ -62,8 +61,7 @@
             android:text="@string/slash"
             android:textColor="@color/google_login_text"
             android:textSize="20sp"
-            android:layout_marginVertical="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toStartOf="@id/character_limit"
             app:layout_constraintTop_toBottomOf="@id/textview_section_title"
             />
@@ -75,29 +73,36 @@
             android:layout_height="wrap_content"
             android:textColor="@color/google_login_text"
             android:textSize="20sp"
-            android:layout_marginVertical="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_section_title"
-            tools:text="15"
-            />
+            tools:text="12" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/create_text_input_layout_add_collection"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:minWidth="380dp"
+            android:maxWidth="465dp"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:paddingVertical="6dp"
             android:hint="@string/textview_hint_insert_collection_name"
             android:layout_marginTop="6dp"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dialog_collection_name_title">
+            app:layout_constraintTop_toBottomOf="@id/dialog_collection_name_title"
+            app:boxStrokeColor="@color/text_input_box_stroke_color"
+            app:hintTextColor="?attr/colorSecondary"
+            app:boxStrokeWidth="2dp"
+            app:cursorColor="?attr/colorAccent" >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_collection_creation_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:lines="1"
@@ -117,19 +122,21 @@
         <TextView
             android:id="@+id/textview_visibility_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:gravity="center_vertical"
             android:text="@string/textview_make_collection_public"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/material_divider"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switch_collection_visibility"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             app:layout_constraintTop_toBottomOf="@id/material_divider"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:shadowColor="?attr/colorAccent"
+            android:theme="@style/CustomCollectionVisibilitySwitch" />
 
         <TextView
             android:id="@+id/textview_visibility_description"
