--- a/app/src/main/res/layout/dialog_rename_collection.xml
+++ b/app/src/main/res/layout/dialog_rename_collection.xml
@@ -16,15 +16,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
-        app:boxStrokeColor="@color/text_input_box_stroke_color"
-        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeColor="?attr/colorOnBackground"
+        app:hintTextColor="?attr/colorOnBackground"
         app:boxStrokeWidth="3dp"
+        app:cursorColor="?attr/colorOnBackground"
         android:hint="@string/textview_collection_name_placeholder">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="380dp"
+            android:maxWidth="460dp"
             android:layout_height="wrap_content"
             />
 
@@ -34,7 +37,7 @@
         android:id="@+id/character_counter_rename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/google_login_text"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
         android:layout_marginBottom="5dp"
         app:layout_constraintTop_toBottomOf="@id/rename_textinputlayout_dialog"
@@ -48,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/slash"
-        android:textColor="@color/google_login_text"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
         android:layout_marginBottom="5dp"
         app:layout_constraintEnd_toStartOf="@id/character_limit_rename"
@@ -60,7 +63,7 @@
         android:id="@+id/character_limit_rename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/google_login_text"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
         android:layout_marginBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
