--- a/app/src/main/res/layout/fragment_tab_following_list.xml
+++ b/app/src/main/res/layout/fragment_tab_following_list.xml
@@ -14,7 +14,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:indicatorColor="?attr/colorAccent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinputlayout_following_users"
