--- a/app/src/main/res/layout/fragment_tab_search_users.xml
+++ b/app/src/main/res/layout/fragment_tab_search_users.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/search_users_layout"
+    android:paddingBottom="90dp"
+    android:fitsSystemWindows="true"
     >
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -16,7 +18,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:indicatorColor="?attr/colorAccent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinputlayout_search_users"
@@ -90,13 +93,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_search_users"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
+        app:layout_constrainedHeight="true"
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_search_users"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:itemCount="12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:itemCount="1"
         tools:listitem="@layout/user_search_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
