--- a/app/src/main/res/layout/book_home_item.xml
+++ b/app/src/main/res/layout/book_home_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_marginEnd="16dp">
 
@@ -10,8 +10,10 @@
         android:id="@+id/book_cover"
         android:layout_width="120dp"
         android:layout_height="180dp"
+        android:contentDescription="@string/content_description_book_cover"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/content_description_book_cover"/>
+        tools:ignore="ImageContrastCheck"
+        tools:src="@drawable/image_not_available" />
 
     <TextView
         android:id="@+id/book_title"
@@ -20,6 +22,6 @@
         android:gravity="center"
         android:textColor="?attr/colorOnBackground"
         android:maxLines="2"
-        />
+        tools:text="@string/placeholder_book_title" />
 
 </LinearLayout>
