--- a/app/src/main/res/layout/book_search_item.xml
+++ b/app/src/main/res/layout/book_search_item.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -15,23 +14,22 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageview_book_cover"
                 android:layout_width="90dp"
                 android:layout_height="140dp"
-                app:layout_constraintHeight_default="wrap"
+                android:layout_marginVertical="6dp"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/content_description_book_cover"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="h"
+                app:layout_constraintHeight_default="wrap"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginVertical="6dp"
-                android:contentDescription="@string/content_description_book_cover"
-                tools:src="@drawable/ic_outline_book_outlined_24"
-                />
+                tools:ignore="ImageContrastCheck"
+                tools:src="@drawable/image_not_available" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container_text"
@@ -44,8 +42,7 @@
                 app:layout_constraintEnd_toStartOf="@id/imagebutton_add_icon"
                 app:layout_constrainedWidth="true"
                 android:layout_marginTop="6dp"
-                android:layout_marginStart="24dp"
-                >
+                android:layout_marginStart="24dp">
 
                 <TextView
                     android:id="@+id/textview_book_title"
@@ -58,8 +55,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     style="@style/TextAppearance.Material3.TitleMedium"
                     android:lines="1"
-                    android:ellipsize="end"
-                    />
+                    android:ellipsize="end" />
 
                 <TextView
                     android:id="@+id/textview_book_description"
@@ -76,14 +72,10 @@
                     style="@style/TextAppearance.Material3.BodyMedium"
                     android:lines="3"
                     android:ellipsize="end"
-                    android:textAlignment="viewStart"
-                    />
+                    android:textAlignment="viewStart" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
             <ImageButton
                 android:id="@+id/imagebutton_add_icon"
@@ -100,15 +92,9 @@
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_collections_bookmark_black_24dp" />
 
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
 
