--- a/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet_add_to_collection_parent"
@@ -14,8 +13,7 @@
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         style="@style/Widget.Material3.BottomSheet.Modal"
         android:paddingHorizontal="24dp"
-        android:paddingBottom="16dp"
-        >
+        android:paddingBottom="16dp">
 
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
             android:id="@+id/bottomsheet_add_to_collection_drag_handler"
@@ -23,8 +21,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/bottom_sheet_add_to_collection_title"
@@ -47,8 +44,7 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             tools:itemCount="5"
-            tools:listitem="@layout/select_collection_item"
-            >
+            tools:listitem="@layout/select_collection_item">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -59,8 +55,7 @@
             style="@style/Widget.Material3.MaterialDivider"
             app:layout_constraintTop_toBottomOf="@id/recyclerview_select_collections"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/button_create_new_collection"
@@ -78,8 +73,7 @@
             android:drawableEnd="@drawable/outline_add_circle_24"
             android:layout_marginTop="14dp"
             android:text="@string/button_create_new_collection"
-            style="@style/Widget.MaterialComponents.Button"
-            />
+            style="@style/Widget.MaterialComponents.Button" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -92,8 +86,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_goneMarginBottom="100dp"
             android:visibility="gone"
-            tools:visibility="visible"
-            >
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/collection_name_title"
@@ -103,8 +96,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/character_counter"
@@ -116,8 +108,7 @@
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/character_separator"
-                tools:text="0"
-                />
+                tools:text="0" />
 
             <TextView
                 android:id="@+id/character_separator"
@@ -131,7 +122,6 @@
                 app:layout_constraintEnd_toStartOf="@id/character_limit"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <TextView
                 android:id="@+id/character_limit"
                 android:layout_width="wrap_content"
@@ -142,8 +132,7 @@
                 android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="15"
-                />
+                tools:text="15" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_input_layout_add_collection"
