--- a/app/src/main/res/layout/bottom_sheet_collection_creation.xml
+++ b/app/src/main/res/layout/bottom_sheet_collection_creation.xml
@@ -51,8 +51,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/textview_section_title"
             app:layout_constraintEnd_toStartOf="@id/character_separator"
-            tools:text="0"
-            />
+            tools:text="0" />
 
         <TextView
             android:id="@+id/character_separator"
@@ -63,9 +62,7 @@
             android:textSize="20sp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toStartOf="@id/character_limit"
-            app:layout_constraintTop_toBottomOf="@id/textview_section_title"
-            />
-
+            app:layout_constraintTop_toBottomOf="@id/textview_section_title" />
 
         <TextView
             android:id="@+id/character_limit"
