--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -168,6 +168,7 @@
         android:textSize="14sp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/orange"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_undo_changes"/>
