Fixed an error in password update, fixed an error about google login

--- a/app/src/main/res/layout/dialog_authentication.xml
+++ b/app/src/main/res/layout/dialog_authentication.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingHorizontal="30dp"
+    android:paddingVertical="15dp"
+    android:layout_marginHorizontal="10dp"
+    >
 
     <TextView
         android:id="@+id/authentication_title"
@@ -16,24 +21,30 @@
 
     <EditText
         android:id="@+id/authentication_email"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="320dp"
+        android:maxWidth="400dp"
         android:layout_height="wrap_content"
         android:hint="Current email"
         android:textSize="22sp"
         android:layout_margin="20dp"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/authentication_title"/>
 
     <EditText
         android:id="@+id/authentication_password"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="320dp"
+        android:maxWidth="400dp"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="Current password"
         android:textSize="22sp"
         android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/authentication_email"/>
 
     <LinearLayout
@@ -61,7 +72,8 @@
             android:textSize="20sp"
             android:enabled="false"
             android:layout_marginStart="10dp"
-            android:backgroundTint="@color/light_blue"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/grey_disabled_item"
             />
 
     </LinearLayout>
