--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -187,6 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="48dp"
                         style="@style/Widget.AppCompat.RatingBar.Indicator"
+                        android:theme="@style/RatingBarBookDetails"
                         />
 
                     <TextView
