--- a/app/src/main/res/layout/dialog_authentication.xml
+++ b/app/src/main/res/layout/dialog_authentication.xml
@@ -13,7 +13,7 @@
         android:id="@+id/authentication_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Authentication required"
+        android:text="@string/authentication_required"
         android:textSize="22sp"
         android:layout_margin="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +22,14 @@
     <EditText
         android:id="@+id/authentication_email"
         android:layout_width="wrap_content"
+        android:autofillHints="emailAddress"
         android:minWidth="320dp"
         android:maxWidth="400dp"
         android:layout_height="wrap_content"
-        android:hint="Current email"
+        android:hint="@string/current_email"
         android:textSize="22sp"
         android:layout_margin="20dp"
+        android:inputType="textEmailAddress"
         app:endIconMode="clear_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +42,8 @@
         android:maxWidth="400dp"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="Current password"
+        android:autofillHints="password"
+        android:hint="@string/password"
         android:textSize="22sp"
         android:layout_margin="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +62,7 @@
             android:id="@+id/authentication_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel_action"
             android:textSize="20sp"
             android:layout_marginEnd="10dp"
             android:backgroundTint="@color/grey_disabled_item"/>
@@ -68,7 +71,7 @@
             android:id="@+id/authentication_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirm"
+            android:text="@string/confirm_action"
             android:textSize="20sp"
             android:enabled="false"
             android:layout_marginStart="10dp"
