--- a/app/src/main/res/layout/fragment_edit_sensible.xml
+++ b/app/src/main/res/layout/fragment_edit_sensible.xml
@@ -15,8 +15,8 @@
             android:id="@+id/edit_sensible_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit sensible data"
-            android:textSize="40sp"
+            android:text="@string/edit_sensible_data"
+            android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
