--- a/app/src/main/res/layout/user_search_item.xml
+++ b/app/src/main/res/layout/user_search_item.xml
@@ -1,7 +1,6 @@
 
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,8 +19,7 @@
             android:layout_height="56dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/imageview_avatar"
-            tools:src="@drawable/ic_baseline_profile_24"
-            />
+            tools:src="@drawable/avatar1" />
 
         <LinearLayout
             android:layout_width="0dp"
